--- a/assessment.html
+++ b/assessment.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="twitter:card" content="summary">
+  <meta property="og:url" content="https://tkhorseback.github.io/assessment/assessment.html">
+  <meta property="og:title" content="あなたのいいところ診断"> 
+  <meta property="og:description" content="ZEN Study Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。">
   <title>あなたのいいところ診断</title>
   <link rel="stylesheet" href="assessment.css">
 </head>
