--- a/assessment.html
+++ b/assessment.html
@@ -3,24 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="twitter:card" content="summary">
-  <meta property="og:url" content="https://tkhorseback.github.io/assessment/assessment.html">
-  <meta property="og:title" content="あなたのいいところ診断"> 
-  <meta property="og:description" content="ZEN Study Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。">
   <title>あなたのいいところ診断</title>
-  <link rel="stylesheet" href="assessment.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-fx038NkLY4U1TCrBDiu5FWPEa9eiZu01EiLryshJbCo=" crossorigin="anonymous">
 </head>
 <body>
-  <h1>あなたのいいところは？</h1>
-  <p>診断したい名前を入れてください</p>
-  <input type="text" id="userName" size="40" maxlength="20">
-  <button id="assessment">診断する</button>
-  <div id="result-area"></div>
-  <div id="tweet-area"><a href="https://twitter.com/intent/tweet?button_hashtag=あなたの良いところ&ref_src=twsrc%5Etfw" 
-    class="twitter-hashtag-button" 
-    data-text="診断結果の文章を一時的に入れておく" 
-    data-show-count="false">Tweet #あなたの良いところ</a>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
-  <script src="assessment.js"></script>
-</body>
+  <header>
+    <nav class="navbar bg-primary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">あなたのいいところ診断</a>
+      </div>
+    </nav>
+  </header>
+  <div class="container pt-5">
+    <h1>あなたのいいところは？</h1>
+    <p>診断したい名前を入れてください</p>
+    
+    <div class="row">
+      <div class="col-sm-9 col-lg-6">
+        <div class="input-group mb-3">
+          <input type="text" class="form-control " id="userName" size="40" maxlength="20">
+          <button class="btn btn-primary" id="assessment">診断する</button>
+        </div>
+      </div>
+    </div>
+
+    <div id="result-area"></div>
+    <div id="tweet-area" class="mt-3"><a href="https://twitter.com/intent/tweet?button_hashtag=あなたの良いところ&ref_src=twsrc%5Etfw" 
+      class="twitter-hashtag-button" 
+      data-text="診断結果の文章を一時的に入れておく" 
+      data-show-count="false">Tweet #あなたの良いところ</a>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+    <script src="assessment.js"></script>
+    </div>
+  </body>
 </html>
